--- a/3-3/4/7.事件冒泡.html
+++ b/3-3/4/7.事件冒泡.html
@@ -5,9 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-
+<div id="dv1">
+    <div id="dv2">
+        <div id="dv3"></div>
+    </div>
+</div>
 <script>
 
+    document.getElementById("dv3").onclick=function () {
+
+    }
 </script>
 </body>
 </html>
