--- a/4/2/1.小贪吃蛇.html
+++ b/4/2/1.小贪吃蛇.html
@@ -19,7 +19,8 @@
         // 创建食物对象
         var map = document.querySelector(".map");
         var elements = [];
-        function Food(width,height,color) {
+
+        function Food(width, height, color) {
             //属性
             this.width = width;
             this.height = height;
@@ -37,27 +38,179 @@
             div.style.backgroundColor = this.color;
             // 移动距离
 
-            var x = parseInt(Math.random()*(map.offsetWidth/this.width))*this.width;
-            var y = parseInt(Math.random()*(map.offsetHeight/this.height))*this.height;
+            this.x = parseInt(Math.random() * (map.offsetWidth / this.width)) * this.width;
+            this.y = parseInt(Math.random() * (map.offsetHeight / this.height)) * this.height;
             div.style.position = "absolute";
-            div.style.left = x + "px";
-            div.style.top = y + "px";
+            div.style.left = this.x + "px";
+            div.style.top = this.y + "px";
 
             map.appendChild(div);
             elements.push(div);
         };
 
         function removeFood() {
-            for (var i = 0;i<elements.length;i++) {
+            for (var i = 0; i < elements.length; i++) {
                 var ele = elements[i];
                 ele.parentNode.removeChild(ele);
-                elements.splice(i,1);
+                elements.splice(i, 1);
             }
         }
 
-        var foo = new Food(20,20,"green");
-        foo.init(map);
+        window.Food = Food;
+
     }());
+
+    // 小蛇
+    (function () {
+        var elements = [];
+
+        function Snake(width, height, direction) {
+            this.width = width || 20;
+            this.height = height || 20;
+            this.body = [
+                {x: 3, y: 2, color: "red"},
+                {x: 2, y: 2, color: "orange"},
+                {x: 1, y: 2, color: "orange"}
+            ];
+            //方向
+            this.direction = direction || "right";
+        }
+
+        Snake.prototype.init = function (map) {
+            removeSnake();
+            for (var i = 0; i < this.body.length; i++) {
+                var obj = this.body[i];
+                // 循环遍历创建div
+                var div = document.createElement("div");
+                map.appendChild(div);
+                //设置div样式
+                div.style.position = "absolute";
+                div.style.width = this.width + "px";
+                div.style.height = this.height + "px";
+                div.style.left = obj.x * this.width + "px";
+                div.style.top = obj.y * this.height + "px";
+                div.style.backgroundColor = obj.color;
+                elements.push(div);
+            }
+
+
+        };
+
+        Snake.prototype.move = function (food, map) {
+            var i = this.body.length - 1;
+            for (; i > 0; i--) {
+                this.body[i].x = this.body[i - 1].x;
+                this.body[i].y = this.body[i - 1].y;
+            }
+
+            switch (this.direction) {
+                case "right" :
+                    this.body[0].x += 1;
+                    break;
+                case "left" :
+                    this.body[0].x -= 1;
+                    break;
+                case "top" :
+                    this.body[0].y -= 1;
+                    break;
+                case "bottom" :
+                    this.body[0].y += 1;
+                    break;
+            }
+
+            var headX = this.body[0].x * this.width;
+            var headY = this.body[0].y * this.height;
+            console.log(headY+"===>"+food.x);
+            if (headX === food.x && headY === food.y) {
+
+                // 重新生成食物
+                food.init(map);
+                // 小蛇屁股添加一节
+                this.body.push({x: this.body[i].x, y: this.body[i].y, color: "orange"});
+
+            }
+        };
+
+        function removeSnake() {
+            var i = elements.length - 1;
+            for (; i >= 0; i--) {
+                var ele = elements[i];
+                ele.parentNode.removeChild(ele);
+                elements.splice(i, 1);
+
+            }
+        }
+
+        window.Snake = Snake;
+    }());
+
+    // 游戏
+    (function () {
+        var that = null;
+
+        function Game(map) {
+            this.food = new Food(20, 20, "green");
+            this.snake = new Snake(20, 20, "right");
+            this.map = map;
+            that = this;
+        };
+
+        Game.prototype.init = function () {
+            this.food.init(this.map);
+            this.snake.init(this.map);
+            this.runSnake();
+            this.bindKey();
+        };
+
+        Game.prototype.runSnake = function () {
+            var timeId = setInterval(function () {
+                this.snake.init(this.map);
+                this.snake.move(this.food, this.map);
+                // 最大最小值
+                var maxX = this.map.offsetWidth / this.snake.width;
+                var maxY = this.map.offsetHeight / this.snake.height;
+                // 小蛇头部的坐标
+                var headX = this.snake.body[0].x;
+                var headY = this.snake.body[0].y;
+                if (headX < 0 || headX >= maxX || headY < 0 || headY >= maxY) {
+                    clearInterval(timeId);
+                    alert("游戏结束");
+                }
+            }.bind(that), 150);
+        };
+
+        // 设置按键，改变小蛇方向
+        Game.prototype.bindKey = function () {
+            document.addEventListener("keydown", function (e) {
+                switch (e.keyCode) {
+                    case 37:
+                        this.snake.direction = "left";
+                        break;
+                    case 38:
+                        this.snake.direction = "top";
+                        break;
+                    case 39:
+                        this.snake.direction = "right";
+                        break;
+                    case 40:
+                        this.snake.direction = "bottom";
+                        break;
+                }
+            }.bind(that), false);
+        };
+        var gm = new Game(document.querySelector(".map"));
+        gm.init();
+    }());
+    // var map = document.querySelector(".map")
+    // var foo = new Food(20, 20, "green");
+    // var snake = new Snake(20, 20, "right");
+    // foo.init(map);
+    //
+    // setInterval(function () {
+    //     snake.init(map);
+    //     snake.move(foo, map)
+    // }, 1000);
+
 </script>
 </body>
 </html>
