--- a/6/3/index.html
+++ b/6/3/index.html
@@ -22,7 +22,7 @@
     </div>
     <!--轮播图-->
     <div class="jd_banner">
-        <ul>
+        <ul class="clearFix">
             <li><a href=""><img src="./images/l8.jpg" alt=""></a></li>
             <li><a href=""><img src="./images/l1.jpg" alt=""></a></li>
             <li><a href=""><img src="./images/l2.jpg" alt=""></a></li>
