--- a/6/4/index.html
+++ b/6/4/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
     <!--[if lt IE 9]>
     <script src="lib/html5shiv/html5shiv.js"></script>
     <script src="lib/respond/respond.min.js"></script>
@@ -16,13 +17,48 @@
 </head>
 <body>
 <!--顶部通栏-->
+<header class="wjs_topBar hidden_sm hidden_xs">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <a href="#" class="wjs_app">
+                    <span class="wjs_icon wjs_icon_phone"></span>
+                    <span>手机微金所</span>
+                    <span class="glyphicon glyphicon-menu-down"></span>
+                    <img src="images/code.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <span class="wjs_icon wjs_icon_tel"></span>
+                <span>4006-89-4006（服务时间:9:00-21:00)</span>
+            </div>
+            <div class="col-md-3">
+                <a href="#">常见问题</a>
+                <a href="#">财富登录</a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" class="btn btn-default btn-register">免费注册</a>
+                <a href="#" class="btn btn-link btn-login">登录</a>
+            </div>
+        </div>
+
+    </div>
+</header>
 <!--导航栏-->
+<nav class="wjs_nav"></nav>
 <!--轮播图-->
+<section class="wjs_banner"></section>
 <!--信息-->
+<section class="wjs_info"></section>
 <!--预约-->
+<section class="wjs_book"></section>
 <!--产品-->
+<section class="wjs_product"></section>
 <!--新闻-->
+<section class="wjs_news"></section>
 <!--合作伙伴-->
+<footer class="wjs_partner"></footer>
+
 
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="lib/jquery/jquery.min.js"></script>
