--- a/6/5/index.html
+++ b/6/5/index.html
@@ -9,7 +9,45 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="sn_container">
+    <!--顶部通栏-->
+    <div class="sn_topBar">
+        <a href="#" class="icon_category"></a>
+        <form action="#">
+            <input type="search" placeholder="60寸电视免费拿">
+        </form>
+        <a href="#" class="icon_cart"></a>
+    </div>
+    <!--轮播图-->
+    <div class="sn_banner">
+        <ul>
+            <li><a href="#"><img src="images/banner08.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner01.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner02.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner03.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner04.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner05.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner06.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner07.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner08.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/banner01.jpg" alt=""></a></li>
+        </ul>
+        <ul>
+            <li class="now"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <!--分类-->
+    <div class="sn_nav"></div>
+    <!--页签-->
+    <footer class="sn_tabs"></footer>
+</div>
 <script src="lib/zepto/zepto.min.js"></script>
 <!--扩展选择器-->
 <script src="lib/zepto/selector.js"></script>
