--- a/6/5/index.html
+++ b/6/5/index.html
@@ -44,9 +44,30 @@
         </ul>
     </div>
     <!--分类-->
-    <div class="sn_nav"></div>
+    <div class="sn_nav">
+        <ul class="clearFix">
+            <li><a href="#"><img src="images/nav01.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav02.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav03.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav04.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav05.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav01.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav02.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav03.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav04.png" alt=""><p>分类</p></a></li>
+            <li><a href="#"><img src="images/nav05.png" alt=""><p>分类</p></a></li>
+        </ul>
+    </div>
     <!--页签-->
-    <footer class="sn_tabs"></footer>
+    <footer class="sn_tabs">
+        <ul>
+            <li><a href="#"><span class="fa fa-home"></span><p>首页</p></a></li>
+            <li><a href="#"><span class="fa fa-reorder"></span><p>分类</p></a></li>
+            <li><a href="#"><span class="fa fa-file-text-o"></span><p>必抢清单</p></a></li>
+            <li><a href="#"><span class="fa fa-user"></span><p>我的易购</p></a></li>
+            <li><a href="#"><span class="fa fa-suitcase"></span><p>新手大礼包</p></a></li>
+        </ul>
+    </footer>
 </div>
 <script src="lib/zepto/zepto.min.js"></script>
 <!--扩展选择器-->
