--- a/13/public/m/index.html
+++ b/13/public/m/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, use-scalable=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
