complete search page

--- a/13/public/m/search.html
+++ b/13/public/m/search.html
@@ -18,8 +18,8 @@
 <!--首页内容-->
 <div class="ct_container">
     <header class="ct_header">
-        <a href="#" class="left">
-            <span class="fa fa-backward"></span>
+        <a href="javascript:history.back();" class="left">
+            <span class="fa fa-arrow-left"></span>
         </a>
         <h3>搜索中心</h3>
     </header>
