--- a/13/public/m/category.html
+++ b/13/public/m/category.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="telephone=no" name="format-detection">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="assets/mui/css/mui.min.css">
+    <link rel="stylesheet" href="assets/fontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/category.css">
+    <title>淘-分类</title>
 </head>
 <body>
 
+<!--首页内容-->
+<div class="ct_container">
+    <header class="ct_header">
+        <a href="javascript:history.back();" class="left">
+            <span class="fa fa-arrow-left"></span>
+        </a>
+        <h3>分类查询</h3>
+        <a href="search.html" class="right">
+            <span class="fa fa-search"></span>
+        </a>
+    </header>
+    <div class="ct_content">
+        <div class="ct_wrapper">
+            <div class="mui-scroll-wrapper">
+                <!--一级分类-->
+                <div class="cate_left">
+                    <ul>
+                        <!--渲染出来-->
+                    </ul>
+                </div>
+                <!--二级分类-->
+                <div class="cate_right">
+                    <ul>
+                        <!--渲染出来-->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--内容渲染出来-->
+    <footer class="ct_footer">
+        <a class="tab_home fa fa-home" href="index.html"><span>首页</span></a>
+        <a class="tab_cate fa fa-bars now" href="category.html"><span>分类</span></a>
+        <a class="tab_cart fa fa-shopping-cart" href="cart.html"><span>购物车</span></a>
+        <a class="tab_user fa fa-user" href="user/index.html"><span>会员中心</span></a>
+    </footer>
+</div>
+<script type="text/template" id="firstTemplate">
+    <% for(var i = 0 ; i < rows.length ; i ++){ %>
+    <li class="<%=i==0?'now':''%>"><a href="javascript:;" data-id="<%=rows[i].id%>"><%=rows[i].categoryName%></a></li>
+    <% } %>
+</script>
+
+<script type="text/template" id="secondTemplate">
+    <% if(rows.length){  %>
+    <% for(var i = 0 ; i < rows.length ; i ++){ %>
+    <li><a href="javascript:;"><img src="<%=rows[i].brandLogo%>" alt=""><p><%=rows[i].brandName%></p></a></li>
+    <% } %>
+    <% }else{ %>
+    <p>当前分类没有数据</p>
+    <% } %>
+</script>
+<script src="assets/mui/js/mui.min.js"></script>
+<script src="assets/zepto/zepto.min.js"></script>
+<script src="assets/artTemplate/template-native.js"></script>
+<script src="js/category.js"></script>
 </body>
 </html>
