--- a/13/public/m/searchList.html
+++ b/13/public/m/searchList.html
@@ -11,14 +11,72 @@
     <link rel="stylesheet" href="assets/fontAwesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/search.css">
-    <title>Title</title>
+    <title>搜索中心</title>
 </head>
 <body>
+<div class="ct_container">
+    <header class="ct_header">
+        <a href="javascript:history.back();" class="left"><span class="fa fa-arrow-left"></span></a>
+        <h3>搜索中心</h3>
+    </header>
 
+    <div class="ct_content">
+        <div class="ct_wrapper">
+            <div class="mui-scroll-wrapper" id="refreshContainer">
+                <div class="mui-scroll">
+                    <!--搜索框-->
+                    <div class="ct_search">
+                        <form action="#">
+                            <input type="search" placeholder="搜索你喜欢的商品">
+                        </form>
+                        <a href="javascript:;">搜索</a>
+                    </div>
+                    <!--排序-->
+                    <div class="ct_order">
+                        <a href="javascript:;" data-order="time">上架时间 <span class="fa fa-angle-down"></span></a>
+                        <a href="javascript:;" data-order="price">价格 <span class="fa fa-angle-down"></span></a>
+                        <a href="javascript:;" data-order="num">销量 <span class="fa fa-angle-down"></span></a>
+                        <a href="javascript:;" data-order="scale">折扣 <span class="fa fa-angle-down"></span></a>
+
+                    </div>
+                    <!--商品区域-->
+                    <div class="ct_product">
+                        <!--TODO-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="ct_footer">
+        <a class="tab_home fa fa-home" href="index.html"><span>首页</span></a>
+        <a class="tab_cate fa fa-bars" href="category.html"><span>分类</span></a>
+        <a class="tab_cart fa fa-shopping-cart" href="cart.html"><span>购物车</span></a>
+        <a class="tab_user fa fa-user" href="user/index.html"><span>会员中心</span></a>
+    </footer>
+</div>
+
+<script type="text/template" id="list">
+    <% for(var i = 0; i < data.length ; i++){ %>
+    <% var item = data[i]; %>
+    <div class="pro_item">
+        <a href="product.html?productId=<%=item.id%>" class="pro_item_box">
+            <% if(item.pic && item.pic[0]){ %>
+            <img src="<%=item.pic[0].picAddr%>">
+            <% }else{ %>
+            <img src="images/none01.jpg">
+            <% } %>
+            <p class="mui-ellipsis-2"><%=item.proName%></p>
+            <p><span class="nowPrice">&yen;<%=item.price%></span> <span class="oldPrice">&yen;<%=item.oldPrice%></span></p>
+            <button class="button">立即购买</button>
+        </a>
+    </div>
+    <% } %>
+</script>
 
 <script src="assets/mui/js/mui.min.js"></script>
 <script src="assets/zepto/zepto.min.js"></script>
 <script src="assets/artTemplate/template-native.js"></script>
+<script src="js/common.js"></script>
 <script src="js/searchList.js"></script>
 </body>
 </html>
