--- a/15/ES6/其他/5_深度克隆.html
+++ b/15/ES6/其他/5_深度克隆.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
+<!--
+拷贝数据：
+    基本数据类型：
+        拷贝后会生成一份新的数据，修改拷贝以后的数据不会影响原数据
+    对象/数组
+        拷贝后不会生成新的数据，而是拷贝引用，修改拷贝以后的数据会影响原来的数据
 
+拷贝数据的方法：
+    1.直接赋值给一个变量  // 浅拷贝
+    2.Object.assign()   // 浅拷贝
+    3.Array.prototype.concat()   //浅拷贝
+    4.Array.prototype.slice()   //浅拷贝
+    5.JSON.parse(JSON.stringify()) // 深拷贝 但不能处理函数数据
+
+判断数据类型：
+    1.typeof返回的数据类型： String, Number, Boolean, Undefined, Object, Function
+    2.Object.prototype.toString.call(obj) //返回 [object string]
+-->
 </body>
 </html>
