--- a/15/ES6/常用/2_const关键字.html
+++ b/15/ES6/常用/2_const关键字.html
@@ -15,4 +15,9 @@
     * 保存不用改变的数据
 -->
 </body>
+<script>
+    const STR = 'keyword';
+    // STR = 'YIWEN';
+    console.log(STR);
+</script>
 </html>
