--- a/15/ES6/常用/3_变量的解构赋值.html
+++ b/15/ES6/常用/3_变量的解构赋值.html
@@ -20,4 +20,9 @@
     * 给多个形参赋值
 -->
 </body>
+<script>
+    let obj = {name : 'kobe', age : 39};
+    let {age} = obj;
+    console.log(age);
+</script>
 </html>
