--- a/15/ES6/常用/4_模板字符串.html
+++ b/15/ES6/常用/4_模板字符串.html
@@ -11,4 +11,11 @@
     * 变化的部分使用${XXXX}定义
 -->
 </body>
+<script>
+    let obj = {
+        name:'yiwen',
+        age:18
+    };
+    console.log(`我晚上${obj.name}和你好${obj.age}`);
+</script>
 </html>
