--- a/15/ES6/常用/5_简化的对象写法.html
+++ b/15/ES6/常用/5_简化的对象写法.html
@@ -18,4 +18,13 @@
     };
 -->
 </body>
+<script>
+    let point = {
+        x,
+        y,
+        setX (X) {
+            this.x = X;
+        }
+    }
+</script>
 </html>
