--- a/15/ES6/其他/5_深度克隆.html
+++ b/15/ES6/其他/5_深度克隆.html
@@ -24,4 +24,41 @@
     2.Object.prototype.toString.call(obj) //返回 [object string]
 -->
 </body>
+<script>
+    function getObjClass(obj) {
+        let result = Object.prototype.toString.call(obj).slice(8, -1);
+        if(result === 'Null'){
+            return 'Null';
+        }else if(result === 'Undefined'){
+            return 'Undefined';
+        }else {
+            return result;
+        }
+    }
+
+    function deepClone(obj) {
+        let result, objClass = getObjClass(obj);
+        if(objClass === 'Object'){
+            result = {};
+        }else if(objClass === 'Array'){
+            result = [];
+        }else {
+            return obj; // 如果是其他数据类型不复制，直接将数据返回
+        }
+        // 遍历目标对象
+        for(let key in obj){
+            let value = obj[key];
+            if(getObjClass(value) === "Object" || 'Array'){
+                result[key] = deepClone(value);
+            }else {
+                result[key] = obj[key];
+            }
+        }
+        return result;
+    }
+
+    let obj3 = {username: 'kobe',age: 39, sex: {option1: '男', option2: '女'}};
+    let obj4 = deepClone(obj3);
+    console.log(obj4);
+</script>
 </html>
