--- a/15/ES6/其他/6_Set和Map数据结构.html
+++ b/15/ES6/其他/6_Set和Map数据结构.html
@@ -26,4 +26,33 @@
     * size
 -->
 </body>
+
+<script>
+    let set = new Set([1,2,3,4,3,2,1,6]);
+    console.log(set);
+    set.add('abc');
+    console.log(set, set.size);
+    //delete(value)
+    set.delete(2);
+    console.log(set);
+    //has(value)
+    console.log(set.has(2));//false
+    console.log(set.has(1));//true
+    //clear()
+    set.clear();
+    console.log(set);
+
+    let map = new Map([['abc', 12],[25, 'age']]);
+    console.log(map);
+    map.set('男', '性别');
+    console.log(map);
+    console.log(map.get(25));//age
+    //delete(key)
+    map.delete('男');
+    console.log(map);
+    console.log(map.has('男'));//false
+    console.log(map.has('abc'));//true
+    map.clear();
+    console.log(map);
+</script>
 </html>
