--- a/15/ES6/常用/12_Generator函数.html
+++ b/15/ES6/常用/12_Generator函数.html
@@ -26,4 +26,56 @@ Generator函数
      6. yield语句返回结果通常为undefined，当再次调用next方法时传参内容会作为启动时yield语句的返回值
 -->
 </body>
+<script>
+    function* generatorTest() {
+        console.log('函数开始执行');
+        yield 'hello';
+        console.log('函数暂停后再次启动');
+        yield 'generator';
+    }
+
+    let Gt = generatorTest();
+    console.log(Gt);
+    let result = Gt.next();
+    console.log(result);
+
+    // 对象的Symbol.iterator属性
+    let myIterable = {};
+    myIterable[Symbol.iterator] = function* () {
+        yield 1;
+        yield 2;
+        yield 4;
+    };
+
+    for (let i of myIterable) {
+        console.log(i);
+    }
+
+    let obj = [...myIterable];
+    console.log(obj);
+
+    console.log('-===================');
+
+    function* sendXml() {
+        let url = yield
+    }
+
+    function getStu(url) {
+        let req = new XMLHttpRequest();
+        req.onreadystatechange = function () {
+            if (req.readyState === 4) {
+                if (req.status === 200) {
+                    let stu = req.response;
+                    resolve(stu);
+                } else {
+                    let sta = false;
+                    reject(sta);
+                }
+            }
+        };
+        req.responseType = 'json';
+        req.open('GET',url);
+        req.send();
+    }
+</script>
 </html>
