--- a/15/ES6/常用/1_let关键字.html
+++ b/15/ES6/常用/1_let关键字.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<button>测试1</button>
+<br>
+<button>测试2</button>
+<br>
+<button>测试3</button>
+<br>
 <!--
 ***let
 1. 作用：
@@ -18,4 +24,15 @@
     * 使用let取代var是趋势
 -->
 </body>
+<script>
+    // console.log(a);
+    let a = 'yi';
+
+    let btns = document.getElementsByTagName('button');
+    for (let i = 0; i<btns.length; i++) {
+        btns[i].onclick = function () {
+            alert(i);
+        }
+    }
+</script>
 </html>
